# agent-task-contract

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: AGENT_TASK.md
src/agent_task_contract/: __init__.py  cli.py
tests/: test_cli.py
