[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-task-contract"
version = "0.1.0"
description = "Validate Markdown task contracts before handing work to coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Manuel Sampedro" }
]
keywords = ["ai agents", "codex", "developer tools", "automation", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
agent-task-contract = "agent_task_contract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
